# dialog-yml-examples

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  README.ru.md  alembic.ini  docker-compose.yaml  main.py  package-lock.json  pyproject.toml
src/: __init__.py  bot.py  logs.py  main.py
src/data/: calendars.yaml  callbacks.yaml  counters.yaml  layouts.yaml  main.yaml  menu.yaml  multiwidgets.yaml  scrolls.yaml  selects.yaml  switch.yaml
src/data/components/: menu_button.yaml  very_long_text.yaml
src/dialog_yml_example.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/functions/: __init__.py  calendars.py  callbacks.py  counters.py  layouts.py  multiwidgets.py  scrolls.py  selects.py  switch.py
src/functions/custom/: __init__.py  calendars.py
src/scripts/: __init__.py  healthcheck.py
tests/: test_hello.py  test_import_structure.py
