[project]
name = "dialog-yml-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dialog-yml>=0.1.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.13",
    "ty>=0.0.12",
]

[tool.ruff]
target-version = "py313"
line-length = 91

[tool.coverage.run]
omit = [
    "*/examples/*",
    "*/tests/*",
]
