[project]
name = "dialog-yml-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dialog-yml>=0.1.3",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.13",
    "ty>=0.0.12",
]

[tool.ruff]
target-version = "py313"
line-length = 91
src = ["src"]

[tool.coverage.run]
omit = [
    "*/examples/*",
    "*/tests/*",
]

[tool.ruff.lint.isort]
lines-after-imports = 2
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
force-sort-within-sections = true

[tool.ruff.lint.pycodestyle]
max-line-length = 91

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ty.src]
include = ["src"]

[tool.ty.rules]
no-matching-overload = "ignore"
invalid-assignment = "ignore"
invalid-argument-type = "ignore"
possibly-missing-attribute = "ignore"

[project.scripts]
spoetka_base = "src:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "arch: marks tests as architecture tests",
    "integration: marks tests as integration tests",
]
# For enable unicode in test names
disable_test_id_escaping_and_forfeit_all_rights_to_community_support = true

[tool.setuptools.packages.find]
where = ["src"]
